--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,3 +1,5 @@
+rmd_files: ["index.Rmd", "abstract.Rmd", "intro.Rmd"]
+
 rmd_files:
   html: ["index.Rmd", "abstract.Rmd", "intro.Rmd"]
   latex: ["abstract.Rmd", "intro.Rmd"]
